fix: sections padding on mobile

--- a/sass/account/page.module.sass
+++ b/sass/account/page.module.sass
@@ -14,6 +14,7 @@ section.dashboard
     display: flex
     @media screen and (max-width: 1000px)
         flex-direction: column
+        padding-top: 0
     & aside
         max-width: 350px
         width: 100%
