--- a/sass/globals.sass
+++ b/sass/globals.sass
@@ -67,6 +67,7 @@ body
     transition-duration: 0s
     & main
         padding: 0 20px
+        padding-bottom: 30px
         width: calc( 100% - 20px * 2 )
         max-width: 1300px
         margin: 0 auto
